- Fix preview clearing after submit. - Add default memes - Fix title

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 	<div id="app">
 
-		<h1>¡meme me!</h1>
+		<h1>&iexcl;meme me!</h1>
 		
 		<form class="create-form">
 
 			<div class="meme-preview-container">
 				<div class="meme meme-preview">
-					<div class="caption-placeholder caption">I duz has preview!</div>
+					<div class="caption-placeholder caption"></div>
 					<div class="caption-top caption"></div>
 					<div class="caption-bottom caption"></div>
 					<div class="image"></div>
@@ -36,8 +36,8 @@
 					<input name="imageUrl" type="url" required placeholder="Enter a URL..." />
 				</div>
 				<div class="form-field">
-					<label for="topCaption">Top Caption*</label>
-					<input name="topCaption" type="text" required placeholder="Enter text for the top..." />
+					<label for="topCaption">Top Caption</label>
+					<input name="topCaption" type="text" placeholder="(Optional) Enter text for the top..." />
 				</div>
 				<div class="form-field">
 					<label for="bottomCaption">Bottom Caption</label>
